--- a/announcement.html
+++ b/announcement.html
@@ -6,7 +6,6 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="assets/css/main.css" />
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body class="no-sidebar">
@@ -112,12 +111,21 @@
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Program</h3>
-                                    <div>
-                                        <a class="list-group-item" href="itinerary.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Itinerary</a>
-                                        <a class="list-group-item" href="coursework.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Coursework</a>
-                                        <a class="list-group-item" href="sidetrips.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Side Trips</a>
-                                        <a class="list-group-item" href="roomboard.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Room & Board</a>
-                                    </div>                                   
+  
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="itinerary.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Itinerary</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="coursework.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Coursework</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="sidetrips.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Side Trips</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="roomboard.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Room & Board</a></th>
+                                        </tr>
+                                    </table>                                    
                                 </section>
 
 
@@ -143,7 +151,7 @@
 
                                     <h3 style="margin-top: 0; margin-bottom: 0;"><strong>An inexpensive way to Live, Study & Travel to Five Famous Chinese Cities:</strong></h3>
                                     <ul>
-                                        <li><p>Beijing</p></li>
+                                        <li>Beijing</li>
                                         <li><p>Xi’an</p></li>
                                         <li><p>Nanjing</p></li>
                                         <li><p>Suzhou</p></li>
