--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                                         The program is designed to help students to gain first-hand experience about Chinese culture through a combination of class meetings, 
                                         seminars, and field trips to many places of historic interest and cultural importance.</p>
 
-
+                                    <br>
                                     <hr>
                                     <br>
                                     <!-- IMAGE -->
                                     <img class="right" src="images/welcome_images/image_20.jpg" alt="center" width="770" height="320">
-                                    <h3><strong>The five famous Chinese cities  students will visit are:</strong></h3>
+                                    <h3><strong>The five famous Chinese cities  students will visit are</strong></h3>
 
                                     <table id="tg-IkuPG" class="tg">
                                         <tr>
@@ -165,7 +165,7 @@
                    
                                                                  
                                     <!-- IMAGE -->
-                                    <img class="right" src="images/welcome_images/image_22.jpg" alt="center" width="770" height="320">
+                                    <!--<img class="right" src="images/welcome_images/image_22.jpg" alt="center" width="770" height="320">-->
 
                                     <p>Students will experience wide geographic differences and varied regional customs & cuisines, 
                                         while learning about the uniqueness of China’s cultural renewal and modernization process. 
@@ -237,6 +237,7 @@
                         <div class="8u 12u(medium) important(medium)">
 
                             <hr>
+                            <br>
                             <!-- Content -->
                             <div id="content">
                                 <section class="last">
@@ -270,7 +271,7 @@
                                         Nanjing serves as a window to China’s miraculous economic takeoff and on-going modernization.  
                                         Be sure to watch this video of Nanjing (also called Nanking):</p>
 
-                                    <hr>
+                                    <br>
 
                                     <h3> THE BEST OF NANJING!</h3>
 
