--- a/testimonials.html
+++ b/testimonials.html
@@ -6,7 +6,6 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="assets/css/main.css" />
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body class="no-sidebar">
@@ -113,12 +112,21 @@
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>About CUNY-BC China</h3>
-                                    <div>
-                                        <a class="list-group-item" href="whychina.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Why China?</a>
-                                        <a class="list-group-item" href="photos.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Photos</a>
-                                        <a class="list-group-item" href="faq.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; FAQ</a>
-                                        <a class="list-group-item" href="hostinstitutions.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Host Institutions</a>
-                                    </div>                                   
+
+                                    <table id="tg-IkuPG" class="tg">
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="whychina.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Why China?</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="photos.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Photos</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="faq.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; FAQ</a></th>
+                                        </tr>
+                                        <tr>
+                                            <th class="tg-yw4l"><a href="hostinstitutions.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Host Institutions</a></th>
+                                        </tr>
+                                    </table>                                    
                                     <br>
                                     <br>
                                     <br>
